// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`large test: exact mode applies major message 1`] = `
Object {
  "appRoot": "/",
  "changelog": Object {
    "2.0.0": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "baz",
              "type": "fix",
            },
          ],
          "version": "5.0.0",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": "three",
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu Jan 01 1970 01:00:00 GMT+0100 (CET)",
    },
  },
  "config": Object {
    "mode": "exact",
  },
  "consts": Object {
    "levels": Array [
      "patch",
      "minor",
      "major",
    ],
    "nsp": "rlsr",
    "rlsrLatest": "rlsr-latest",
  },
  "dbg": [Function],
  "log": [Function],
  "mainPackage": Object {
    "rlsr": Object {
      "determinedIncrementLevel": 2,
    },
    "version": "2.0.0",
  },
  "messages": Array [],
  "packageNames": Array [
    "one",
    "two",
    "three",
    "four",
    "five",
  ],
  "packages": Array [
    Object {
      "dependencies": Object {
        "five": "^4.5.0",
        "four": "5.0.0",
      },
      "name": "one",
      "version": "1.2.4",
    },
    Object {
      "dependencies": Object {
        "three": "3.4.6",
      },
      "name": "two",
      "version": "2.3.5",
    },
    Object {
      "dependencies": Object {
        "four": "5.0.0",
      },
      "name": "three",
      "version": "3.4.6",
    },
    Object {
      "name": "four",
      "version": "5.0.0",
    },
    Object {
      "name": "five",
      "version": "4.5.6",
    },
  ],
}
`;

exports[`large test: exact mode applies messages with multiple affected packages 1`] = `
Object {
  "appRoot": "/",
  "changelog": Object {
    "1.9.0": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "waz",
              "type": "feat",
            },
          ],
          "version": "1.3.0",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "source": undefined,
              "subject": "fix: tar",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu Jan 01 1970 01:00:00 GMT+0100 (CET)",
    },
  },
  "config": Object {
    "mode": "exact",
  },
  "consts": Object {
    "levels": Array [
      "patch",
      "minor",
      "major",
    ],
    "nsp": "rlsr",
    "rlsrLatest": "rlsr-latest",
  },
  "dbg": [Function],
  "log": [Function],
  "mainPackage": Object {
    "rlsr": Object {
      "determinedIncrementLevel": 1,
    },
    "version": "1.9.0",
  },
  "messages": Array [],
  "packageNames": Array [
    "one",
    "two",
    "three",
    "four",
    "five",
  ],
  "packages": Array [
    Object {
      "dependencies": Object {
        "five": "^4.5.0",
        "four": "^4.5.0",
      },
      "name": "one",
      "version": "1.3.0",
    },
    Object {
      "dependencies": Object {
        "three": "3.4.6",
      },
      "name": "two",
      "version": "2.3.5",
    },
    Object {
      "dependencies": Object {
        "four": "4.0.0 - 4.5.6",
      },
      "name": "three",
      "version": "3.4.6",
    },
    Object {
      "name": "four",
      "version": "4.5.6",
    },
    Object {
      "name": "five",
      "version": "4.5.6",
    },
  ],
}
`;

exports[`large test: exact mode applies minor message 1`] = `
Object {
  "appRoot": "/",
  "changelog": Object {
    "1.9.0": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "bar",
              "type": "feat",
            },
          ],
          "version": "4.6.0",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": "three",
              "subject": "feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu Jan 01 1970 01:00:00 GMT+0100 (CET)",
    },
  },
  "config": Object {
    "mode": "exact",
  },
  "consts": Object {
    "levels": Array [
      "patch",
      "minor",
      "major",
    ],
    "nsp": "rlsr",
    "rlsrLatest": "rlsr-latest",
  },
  "dbg": [Function],
  "log": [Function],
  "mainPackage": Object {
    "rlsr": Object {
      "determinedIncrementLevel": 1,
    },
    "version": "1.9.0",
  },
  "messages": Array [],
  "packageNames": Array [
    "one",
    "two",
    "three",
    "four",
    "five",
  ],
  "packages": Array [
    Object {
      "dependencies": Object {
        "five": "^4.5.0",
        "four": "4.6.0",
      },
      "name": "one",
      "version": "1.2.4",
    },
    Object {
      "dependencies": Object {
        "three": "3.4.6",
      },
      "name": "two",
      "version": "2.3.5",
    },
    Object {
      "dependencies": Object {
        "four": "4.6.0",
      },
      "name": "three",
      "version": "3.4.6",
    },
    Object {
      "name": "four",
      "version": "4.6.0",
    },
    Object {
      "name": "five",
      "version": "4.5.6",
    },
  ],
}
`;

exports[`large test: exact mode applies patch message 1`] = `
Object {
  "appRoot": "/",
  "changelog": Object {
    "1.8.6": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "foo",
              "type": "fix",
            },
          ],
          "version": "4.5.7",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": "three",
              "subject": "fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu Jan 01 1970 01:00:00 GMT+0100 (CET)",
    },
  },
  "config": Object {
    "mode": "exact",
  },
  "consts": Object {
    "levels": Array [
      "patch",
      "minor",
      "major",
    ],
    "nsp": "rlsr",
    "rlsrLatest": "rlsr-latest",
  },
  "dbg": [Function],
  "log": [Function],
  "mainPackage": Object {
    "rlsr": Object {
      "determinedIncrementLevel": 0,
    },
    "version": "1.8.6",
  },
  "messages": Array [],
  "packageNames": Array [
    "one",
    "two",
    "three",
    "four",
    "five",
  ],
  "packages": Array [
    Object {
      "dependencies": Object {
        "five": "^4.5.0",
        "four": "4.5.7",
      },
      "name": "one",
      "version": "1.2.4",
    },
    Object {
      "dependencies": Object {
        "three": "3.4.6",
      },
      "name": "two",
      "version": "2.3.5",
    },
    Object {
      "dependencies": Object {
        "four": "4.5.7",
      },
      "name": "three",
      "version": "3.4.6",
    },
    Object {
      "name": "four",
      "version": "4.5.7",
    },
    Object {
      "name": "five",
      "version": "4.5.6",
    },
  ],
}
`;

exports[`large test: exact mode applies several messages 1`] = `
Object {
  "appRoot": "/",
  "changelog": Object {
    "1.9.0": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "taz",
              "type": "feat",
            },
          ],
          "version": "4.6.0",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "raz",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: taz",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "subject": "roo",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: taz",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: roo",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: roo",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": "three",
              "subject": "feat: taz",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu Jan 01 1970 01:00:00 GMT+0100 (CET)",
    },
  },
  "config": Object {
    "mode": "exact",
  },
  "consts": Object {
    "levels": Array [
      "patch",
      "minor",
      "major",
    ],
    "nsp": "rlsr",
    "rlsrLatest": "rlsr-latest",
  },
  "dbg": [Function],
  "log": [Function],
  "mainPackage": Object {
    "rlsr": Object {
      "determinedIncrementLevel": 1,
    },
    "version": "1.9.0",
  },
  "messages": Array [],
  "packageNames": Array [
    "one",
    "two",
    "three",
    "four",
    "five",
  ],
  "packages": Array [
    Object {
      "dependencies": Object {
        "five": "^4.5.0",
        "four": "4.6.0",
      },
      "name": "one",
      "version": "1.2.4",
    },
    Object {
      "dependencies": Object {
        "three": "3.4.6",
      },
      "name": "two",
      "version": "2.3.5",
    },
    Object {
      "dependencies": Object {
        "four": "4.6.0",
      },
      "name": "three",
      "version": "3.4.6",
    },
    Object {
      "name": "four",
      "version": "4.6.0",
    },
    Object {
      "name": "five",
      "version": "4.5.6",
    },
  ],
}
`;
